task_#5 refactor code

--- a/public/admin/custome.css
+++ b/public/admin/custome.css
@@ -8,12 +8,19 @@
   border: 1px solid gray;
 }
 
-.product-feature__title {
-  padding: 5px auto;
-  border: thin solid gray;
-  font-weight: bold;
+.table--center {
+  text-align: center;
 }
 
 .btn--color-white {
   color: white;
+}
+
+.btn--hidden {
+  display: none;
+}
+
+.select {
+  border: 1px solid red;
+  padding: 5px;
 }
